<resources>
    <string name="app_name">Quizzy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="todo">TODO</string>
    <string name="introtxt">Welcome to Quizzy</string>
    <string name="introsubhead">Extend your knowledge by giving daily quiz</string>
    <string name="introbtn">Get Started</string>
    <string name="loginhead">Log in to continue</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="loginsub">Don\'t have an account? Sign up</string>
    <string name="login">Login</string>
    <string name="signuphead">Register to create an account</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="signupsubhead">Already have an account? Login</string>
    <string name="give_daily_quiz">Give daily quiz</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="follow_us">Follow us</string>
    <string name="profile">Profile</string>
    <string name="rate_us">Rate us</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">This app will provide you daily quizzes by attending it you can increase your knowledge.\nIt is a good practice to make this your daily routine it will hardly take 5 to 10 minutes.</string>
    <string name="about_quiz_app">About quiz app</string>
    <string name="follow_me_on">Follow me on</string>
    <string name="contact">For any queries or suggestion regarding the app you can contact me through</string>
    <string name="instagram">Instagram</string>
    <string name="gmail">Gmail - rathodkaransinh125@gmail.com</string>
    <string name="linked_in">Linked In</string>
    <string name="facebook">Facebook</string>
    <string name="your_score_20">Your Score: 20</string>
</resources>