<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:text="@string/about_quiz_app"
        style="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/about_text"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/contact"
        style="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:id="@+id/instagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/link"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="16dp"
        android:text="@string/instagram"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/linked_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/link"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="16dp"
        android:text="@string/facebook"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="16dp"
        android:text="@string/gmail"
        android:textSize="20sp"/>

</LinearLayout>