<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_bk"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signuphead"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primaryTextColor"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/signupEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/signupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/loginnav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupsubhead"
            android:gravity="end"
            android:textColor="@color/primaryTextColor"
            style="@style/TextAppearance.AppCompat.Subhead"/>

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>